Replaced reverse-updates with shadow/speculative client copies
-completely rewrote the SpeculativeProjection to use a 2-copy approach (shadow copy of the server and a local projection derived from it), eliminating the use of reverse-updates
-while the reverse-update design originally seemed like a clever and elegant solution (only needing 1 copy of state), it was becoming increasinly complicated to support all the reverse implementations without destroying information and the design would not be able to support some future "delayed-followup" updates
-as a consequence of this change, the special logic to apply updates could be removed in favour of using the common "processor" logic the server uses, just invoking it slightly differently
-other support for reverse updates will be removed in a later commit as this one is very complex and should be kept focused